first pass at changes for AS 4.0

--- a/frontend/views/_shared_templates.html.erb
+++ b/frontend/views/_shared_templates.html.erb
@@ -18,7 +18,7 @@
 
 <div id="template_custom_restrictions_search_enhance"><!--
   {if  Object.keys(restrictions).length > 0}
-    <div id="custom-restriction" class="label label-danger">
+    <div id="custom-restriction" class="label bg-danger badge">
       {for restriction in restrictions}
         <span>
           ${restriction}
