--- a/frontend/assets/custom_restrictions_context.css
+++ b/frontend/assets/custom_restrictions_context.css
@@ -1,21 +1,18 @@
-/* override core! */
-h2 > .label {
-  display: inline-block;
-  margin-top: 0;
-  margin-right: 1rem;
-  vertical-align: top;
-  font-size: 1.35rem;
+/* override core */
+.record-pane .h2,
+.record-pane h2 {
+  display: flex;
+  gap: 0.5rem;
+  align-items: flex-start;
 }
 #custom-restriction {
   display: inline-grid;
   grid-template-columns: min-content fit-content(100%);
-  gap: 0.5rem;
+  gap: 0.1rem;
   max-width: 400px;
   align-items: center;
   white-space: wrap;
   text-align: left;
-  letter-spacing: 0.3px;
-  font-size: 1.35rem;
 }
 #custom-restriction::before {
   margin-right: 4px;
@@ -26,7 +23,6 @@ h2 > .label {
 }
 #custom-restriction-mini-tree-loader {
   margin-left: 0;
-  font-size: 1.25rem;
   border: none;
 }
 #custom-restriction-mini-tree-loader[aria-expanded="true"] {
@@ -42,17 +38,19 @@ h2 > .label {
   content: "\e5ce";
 }
 #custom-restrictions-mini-tree {
+  margin-bottom: 1rem;
   padding: 1rem;
   border: 1px solid #ccc;
   border-radius: 0 4px 4px 4px;
-  font-size: 1.5rem;
 }
 span[class*="mini-tree-level-"] {
   display: block;
 }
 span[class*="mini-tree-level-"]::before {
+  padding-bottom: 2px;
   content: "\e5da";
-  vertical-align: text-bottom;
+  vertical-align: middle;
+  font-size: 1.35rem;
   font-family: "Material Symbols Outlined";
   font-variation-settings: "FILL" 1;
 }
