--- a/frontend/views/layout_head.html.erb
+++ b/frontend/views/layout_head.html.erb
@@ -39,10 +39,8 @@
           raw_restrictions = result['custom_restrictions_u_sstr'].nil? ? {} : ASUtils.json_parse(result['custom_restrictions_u_sstr'].first)
           raw_restrictions.each do |level, restriction|
             restrictions << I18n.t('custom_restrictions_and_context.restriction_label', 
-                              {
-                                :level => level.titleize,
-                                :restriction => I18n.t('enumerations.custom_restriction_type.' + restriction, I18n.t('enumerations.custom_restriction_type.default'))
-                              }
+                              level: level.titleize,
+                              restriction: I18n.t('enumerations.custom_restriction_type.' + restriction, default: I18n.t('enumerations.custom_restriction_type.default'))
                             )
           end
 
