--- a/frontend/views/mini_tree/_context.html.erb
+++ b/frontend/views/mini_tree/_context.html.erb
@@ -2,14 +2,12 @@
 
 <% unless @restrictions.blank? %>
   <% @restrictions.each do |level, restriction| %>
-    <div id="custom-restriction" class="label label-danger">
+    <div id="custom-restriction" class="label bg-danger badge">
       <span>
         <%= 
           I18n.t('custom_restrictions_and_context.restriction_label', 
-            {
-              :level => level.titleize,
-              :restriction => I18n.t('enumerations.custom_restriction_type.' + restriction, I18n.t('enumerations.custom_restriction_type.default'))
-            }
+              level: level.titleize,
+              restriction: I18n.t('enumerations.custom_restriction_type.' + restriction, default: I18n.t('enumerations.custom_restriction_type.default'))
           )
         %>
       </span>
